Modified Ant build